--- a/index.html
+++ b/index.html
@@ -500,6 +500,25 @@
           </ul>
         </div>
       </div>
+      <div class="subscribe-form">
+        <form class="email-form">
+          <label class="name-label">
+            Subscribe
+            <input
+              class="form-features"
+              type="email"
+              name="email_adress"
+              placeholder="E-mail"
+            />
+          </label>
+          <button clas="button-subscribe" type="submit">
+            Subscribe
+            <svg class="email-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </footer>
   </body>
 </html>
